<resources>
    <string name="app_name">Cálculos nas operações da B3</string>
    <string name="qntAcoesValorDisponivel">Quantidade de ações por valor disponível</string>
    <string name="acoesDiferencaCompraVenda">Diferença da compra e venda pretendida</string>
    <string name="app_part2">Carteira</string>
    <string name="cadastroPapel">Cadastro do papel</string>
    <string name="app_part3">Parâmetros</string>
    <string name="parametros">Custos operacionais</string>
    <string name="crypto">Cryptocoins</string>
    <string name="valfix">Valor fixo</string>
    <string name="corretagemReal">Corretagem: R$</string>
    <string name="corretagemPorcentagem">Corretagem: %</string>
    <string name="custodiaReal">Custodia (CBLC): R$</string>
    <string name="custodiaPorcentagem">Custodia (CBLC): %</string>
    <string name="TxLiquidacaoReal">(Taxa de liquidação da CBLC): R$</string>
    <string name="TxLiquidacaoPorcentagem">(Taxa de liquidação da CBLC): %</string>
    <string name="TxNegociacaoReal">(Taxa de negociação): R$</string>
    <string name="TxNegociacaoPorcentagem">(Taxa de negociação): %</string>
    <string name="IssReal">ISS: R$</string>
    <string name="IssPorcentagem">ISS: %</string>
</resources>
