<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="15dp"
    style="@style/BasicLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/Header"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/qntAcoesValorDisponivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qntAcoesValorDisponivel"
            android:textSize="20sp"
            android:onClick="qnt_acoes_valor_disponivel">
        </Button>
        <Button
            android:id="@+id/cadastroPapel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acoesDiferencaCompraVenda"
            android:textSize="20sp"
            android:onClick="valor_min_para_venda_sem_perdas">
        </Button>

        <TextView
            style="@style/Header"
            android:text="@string/app_part2"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"/>
        <Button
            android:id="@+id/acoesDiferencaCompraVenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastroPapel"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:onClick="cadastro_papel">
        </Button>
        <Button
            android:id="@+id/testeDeThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cryptocoins"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:onClick="crypto">
        </Button>

        <TextView
            style="@style/Header"
            android:text="@string/app_part3"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"/>
        <Button
            android:id="@+id/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametros"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:onClick="parametros">
        </Button>
        <Button
            android:id="@+id/exportar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exportar"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:onClick="exportar">
        </Button>
    </LinearLayout>
</ScrollView>